# weekend-ai-project

./: README.md  main.py  pyproject.toml
src/: data_preprocessing.py  model_evaluation.py  parameter_tuning.py  sentiment_model.py  test_preprocessing.py  test_sentiment.py
streamlit_app/pages/: main.py
