[project]
name = "weekend-ai-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "ollama>=0.5.3",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pypdf2>=3.0.1",
    "pytest>=8.4.1",
    "python-docx>=1.2.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "streamlit>=1.48.0",
    "textblob>=0.19.0",
    "tqdm>=4.67.1",
]
